[gd_scene load_steps=27 format=3 uid="uid://ccnobfjaguoie"]

[ext_resource type="Script" path="res://src/farm/tile.gd" id="1_8vnt4"]
[ext_resource type="Texture2D" uid="uid://ba73mevd2p11r" path="res://assets/farm/farmland.png" id="2_v6n7s"]
[ext_resource type="Texture2D" uid="uid://kpujc3kdexl3" path="res://assets/custom/PurpleOverlay.png" id="3_jwute"]
[ext_resource type="Texture2D" uid="uid://bofm5pndld7ww" path="res://assets/custom/FarmTile2.png" id="4_bvg7e"]
[ext_resource type="Texture2D" uid="uid://bt841vsdlx75b" path="res://assets/custom/mtn-rock.png" id="5_ksptn"]
[ext_resource type="Texture2D" uid="uid://dbbhalo3edxpk" path="res://assets/custom/BlightTarget.png" id="6_6m84b"]
[ext_resource type="Texture2D" uid="uid://bjygvp3da0050" path="res://assets/custom/destroy_target.png" id="7_023dm"]
[ext_resource type="Texture2D" uid="uid://cba7uh0mnuoum" path="res://assets/custom/LeafParticle.png" id="7_otjuw"]
[ext_resource type="Texture2D" uid="uid://jbl8fupoclkv" path="res://assets/custom/GainYieldParticle.png" id="8_hyote"]
[ext_resource type="Theme" uid="uid://bdodinwpnjkw8" path="res://assets/theme_huge.tres" id="8_ikq5e"]
[ext_resource type="Texture2D" uid="uid://clf1ovfisrdg0" path="res://assets/animation/destroy.png" id="9_cvalt"]
[ext_resource type="Texture2D" uid="uid://dgmqywyoi5u0p" path="res://assets/custom/EffectParticle.png" id="9_iiv5d"]
[ext_resource type="Texture2D" uid="uid://duxmurjovuqmh" path="res://assets/custom/ProtectOverlay.png" id="13_atcg2"]
[ext_resource type="Texture2D" uid="uid://cr06n22pox1gd" path="res://assets/ui/select_prompt.png" id="14_ob73a"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1iam7"]
bg_color = Color(0.807843, 0.815686, 0.835294, 0.537255)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_0du70"]
particles_animation = true
particles_anim_h_frames = 4
particles_anim_v_frames = 2
particles_anim_loop = false

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_hyydv"]
particle_flag_disable_z = true
emission_shape_offset = Vector3(45, 45, 0)
emission_shape = 3
emission_box_extents = Vector3(45, 45, 1)
angle_min = -720.0
angle_max = 720.0
spread = 180.0
initial_velocity_min = 50.0
initial_velocity_max = 50.0
angular_velocity_min = -82.76
angular_velocity_max = 140.69
gravity = Vector3(0, 98, 0)
scale_min = 3.2
scale_max = 3.2
hue_variation_max = 0.09
anim_speed_min = 0.73
anim_speed_max = 1.66

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_hdtle"]
particles_animation = true
particles_anim_h_frames = 4
particles_anim_v_frames = 1
particles_anim_loop = true

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_gn4kv"]
particle_flag_disable_z = true
emission_shape_offset = Vector3(45, 45, 0)
emission_shape = 3
emission_box_extents = Vector3(45, 45, 1)
direction = Vector3(0, -1, 0)
initial_velocity_max = 40.23
gravity = Vector3(0, 42, 0)
scale_min = 2.0
scale_max = 2.0
hue_variation_min = 0.44
hue_variation_max = 0.58
anim_speed_min = 3.03
anim_speed_max = 3.49

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_q4cp8"]
particles_animation = true
particles_anim_h_frames = 7
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_swo03"]
particle_flag_disable_z = true
emission_shape_offset = Vector3(45, 45, 0)
emission_shape = 3
emission_box_extents = Vector3(45, 45, 1)
direction = Vector3(0, 1, 0)
spread = 90.0
initial_velocity_max = 5.0
gravity = Vector3(0, -98, 0)
scale_min = 1.5
scale_max = 1.5
anim_speed_min = 0.5
anim_speed_max = 1.0

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_6irwh"]
particles_animation = true
particles_anim_h_frames = 4
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_7d61u"]
particle_flag_disable_z = true
emission_shape_offset = Vector3(45, 45, 0)
emission_shape = 3
emission_box_extents = Vector3(45, 45, 1)
initial_velocity_max = 28.74
gravity = Vector3(0, -98, 0)
scale_min = 5.0
scale_max = 5.0
anim_speed_min = 1.0
anim_speed_max = 1.0

[sub_resource type="AtlasTexture" id="AtlasTexture_fc3br"]
atlas = ExtResource("14_ob73a")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2vj45"]
atlas = ExtResource("14_ob73a")
region = Rect2(16, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_xs74g"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fc3br")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2vj45")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}]

[node name="Tile" type="MarginContainer"]
script = ExtResource("1_8vnt4")

[node name="Farmland" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(5.7, 5.7)
texture = ExtResource("2_v6n7s")
offset = Vector2(8, 8)
region_enabled = true
region_rect = Rect2(0, 0, 16, 16)

[node name="PurpleOverlay" type="Sprite2D" parent="."]
visible = false
scale = Vector2(5.7, 5.7)
texture = ExtResource("3_jwute")
offset = Vector2(8, 8)

[node name="TileButton" type="TextureButton" parent="."]
texture_filter = 1
custom_minimum_size = Vector2(91, 91)
layout_mode = 2
texture_normal = ExtResource("4_bvg7e")
stretch_mode = 0

[node name="Rock" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
position = Vector2(47, 46)
scale = Vector2(5.7, 5.7)
texture = ExtResource("5_ksptn")

[node name="PlantSprite" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
position = Vector2(45, 91)
scale = Vector2(5.7, 5.7)
offset = Vector2(0, -16)
region_enabled = true
region_rect = Rect2(0, 32, 32, 32)

[node name="BlightTargetOverlay" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
scale = Vector2(5.7, 5.7)
texture = ExtResource("6_6m84b")
offset = Vector2(8, 8)

[node name="DestroyTargetOverlay" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
scale = Vector2(5.7, 5.7)
texture = ExtResource("7_023dm")
offset = Vector2(8, 8)

[node name="PeekCont" type="PanelContainer" parent="."]
visible = false
z_index = 1
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1iam7")

[node name="CenterCont" type="CenterContainer" parent="PeekCont"]
layout_mode = 2

[node name="PeekLabel" type="Label" parent="PeekCont/CenterCont"]
texture_filter = 1
custom_minimum_size = Vector2(16, 0)
layout_mode = 2
theme = ExtResource("8_ikq5e")
text = "123"
horizontal_alignment = 1

[node name="HarvestParticles" type="GPUParticles2D" parent="."]
z_index = 1
texture_filter = 1
material = SubResource("CanvasItemMaterial_0du70")
emitting = false
process_material = SubResource("ParticleProcessMaterial_hyydv")
texture = ExtResource("7_otjuw")
lifetime = 0.3
one_shot = true
explosiveness = 0.91

[node name="AddYieldParticles" type="GPUParticles2D" parent="."]
texture_filter = 1
material = SubResource("CanvasItemMaterial_hdtle")
emitting = false
amount = 4
process_material = SubResource("ParticleProcessMaterial_gn4kv")
texture = ExtResource("8_hyote")
lifetime = 0.25
one_shot = true
explosiveness = 0.8

[node name="EffectParticles" type="GPUParticles2D" parent="."]
z_index = 1
texture_filter = 1
material = SubResource("CanvasItemMaterial_q4cp8")
emitting = false
amount = 3
process_material = SubResource("ParticleProcessMaterial_swo03")
texture = ExtResource("9_iiv5d")
one_shot = true
explosiveness = 0.8

[node name="DestroyParticles" type="GPUParticles2D" parent="."]
texture_filter = 1
material = SubResource("CanvasItemMaterial_6irwh")
emitting = false
process_material = SubResource("ParticleProcessMaterial_7d61u")
texture = ExtResource("9_cvalt")
lifetime = 0.3
one_shot = true
explosiveness = 0.8

[node name="ProtectOverlay" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.321569)
texture_filter = 1
scale = Vector2(5.7, 5.7)
texture = ExtResource("13_atcg2")
centered = false

[node name="SelectPrompt" type="AnimatedSprite2D" parent="."]
visible = false
z_index = 2
texture_filter = 1
scale = Vector2(5.7, 5.7)
sprite_frames = SubResource("SpriteFrames_xs74g")
frame_progress = 0.751283
centered = false

[connection signal="gui_input" from="TileButton" to="." method="_on_tile_button_gui_input"]
[connection signal="mouse_entered" from="TileButton" to="." method="_on_tile_button_mouse_entered"]
[connection signal="mouse_exited" from="TileButton" to="." method="_on_tile_button_mouse_exited"]
